Fix z-index bug with header on mobile screens

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -84,6 +84,7 @@ header {
     }
     .navigation-menu {
         position: absolute;
+        z-index: 10;
         top: 0;
         padding: 0;
         margin-top: 70px;
